--- a/SimpleExample/build.gradle
+++ b/SimpleExample/build.gradle
@@ -21,5 +21,5 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'io.door2door:mobility-analytics-sdk:0.0.2-SNAPSHOT'
+    compile 'io.door2door:mobility-analytics-sdk:0.0.1'
 }
